--- a/k8s/cdutten-web-svc.yaml
+++ b/k8s/cdutten-web-svc.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: web-svc
-  name: web-svc
+    app: cdutten-web-svc
+  name: cdutten-web-svc
   namespace: cdutten-web
 spec:
   ports:
@@ -13,7 +13,7 @@ spec:
     protocol: TCP
     targetPort: 5000
   selector:
-    app: web
+    app: cdutten-web
   type: ClusterIP
 status:
   loadBalancer: {}
