--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,18 +1,18 @@
 apiVersion: skaffold/v2beta28
 kind: Config
 metadata:
-  name: web
+  name: cdutten-web
 build:
   artifacts:
-  - image: cdutten/flask
+  - image: cdutten/web
     docker:
       dockerfile: Dockerfile
 deploy:
   kubectl:
     manifests:
-    - k8s/web-ns.yaml
-    - k8s/web-deploy.yaml
-    - k8s/web-svc.yaml
+    - k8s/cdutten-web-ns.yaml
+    - k8s/cdutten-web-deploy.yaml
+    - k8s/cdutten-web-svc.yaml
 profiles:
   - name: dev
     patches:
