--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: 'https://cdutten.com/'
+baseURL: 'https://cdutten.github.io/web/'
 title: cdutten
 enableRobotsTXT: true
 languageCode: 'en-us'
