--- a/config.yml
+++ b/config.yml
@@ -14,7 +14,8 @@ params:
       safari_pinned_tab: "/web/images/logo.png"
     profileMode:
       enabled: true
-      subtitle: "SysAdmin from Argentina living in the Česká republika. Trying to explain things that have been already explained"
+      title: "Sysadmin"
+      subtitle: "From Argentina, living in the Česká republika. Trying to explain things that have already been explained."
       imageUrl: "/web/images/logo.png" # optional
       imageTitle: "cdutten logo - anime style developer eating cheese while works"
       imageWidth: 320
@@ -30,3 +31,6 @@ params:
     - name: LinkedIn
       url: "https://www.linkedin.com/in/cesar-dutten-543251120/"
     ShowReadingTime: true
+    analytics:
+      google:
+        SiteVerificationTag: G-HG1DV3F56M
